--- a/manifest/config/config.yaml
+++ b/manifest/config/config.yaml
@@ -20,7 +20,8 @@ database:
     stdout:  true
 
   default:
-    link:   "mysql:root:12345678@tcp(127.0.0.1:3306)/test"
+    link:   "sqlite:test.db3"
+    #link:   "mysql:root:12345678@tcp(127.0.0.1:3306)/test"
     debug:  true
 
 # CLI.
